[package]
name = "abrt-dbus"
version = "0.1.0"
edition = "2024"

[dependencies]
# dbus = "0.9.9"
# dbus = { git = "https://github.com/lambdajon/dbus-rs.git", rev = "329c19f878f1db9220027eca79b2e965a2341b21", branch = "debug-parse-entry"}
dbus = { git = "https://github.com/lambdajon/dbus-rs.git",  branch = "debug-parse-entry"}
dbus-crossroads = { git = "https://github.com/lambdajon/dbus-rs.git", branch = "debug-parse-entry"}
# dbus-crossroads = "0.5"
tokio = "1.48.0"
# dbus-tokio = "0.7.6"
dbus-tokio = { git = "https://github.com/lambdajon/dbus-rs.git", branch = "debug-parse-entry"}
futures = "0.3.31"
# dbus-tree = "0.9.2"
# libdbus-sys = "0.2.6"
# libc = "=0.2.178"
